feat: next-auth login error 처리

--- a/src/app/auth/signin/LoginPage.module.css
+++ b/src/app/auth/signin/LoginPage.module.css
@@ -36,3 +36,32 @@
 .button:hover {
     background-color: #0056b3;
 }
+
+@keyframes slideIn {
+    from { transform: translateX(100%); opacity: 0; }
+    to { transform: translateX(0); opacity: 1; }
+}
+
+@keyframes slideOut {
+    from { transform: translateX(0); opacity: 1; }
+    to { transform: translateX(100%); opacity: 0; }
+}
+
+.toast {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    background-color: #ffaaaa;
+    padding: 20px;
+    border-radius: 5px;
+    display: none; /* 기본적으로 표시하지 않음 */
+}
+
+.toast-show {
+    display: block;
+    animation: slideIn 3s forwards;
+}
+
+.toast-hide {
+    animation: slideOut 3s forwards;
+}
